@@ -24,7 +24,7 @@ content of dictionary references.
   <active>yes</active>
  </contributor>
  <date>2012-10-24</date>
- <time>23:24:00</time>
+ <time>23:50:07</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -51,6 +51,7 @@ summary, extensions, interfaces, traits, classes, functions, constants, globals,
 - improved true results again with detection of conditional code and excludes from parsing
 - upgrade ssh reference to version 0.12 (thanks to Remi Collet)
 - upgrade openssl reference with new PHP 5.4.8 constants (thanks to Remi Collet)
+- upgrade standard reference with PHP 5.4.8 optional second argument for assert() to specify custom message
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
@@ -1362,6 +1363,7 @@ summary, extensions, interfaces, traits, classes, functions, constants, globals,
 - improved true results again with detection of conditional code and excludes from parsing
 - upgrade ssh reference to version 0.12 (thanks to Remi Collet)
 - upgrade openssl reference with new PHP 5.4.8 constants (thanks to Remi Collet)
+- upgrade standard reference with PHP 5.4.8 optional second argument for assert() to specify custom message
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
